fix: #1649, updates spacing styles to avoid inner fields having varied margin-bottom

--- a/src/admin/components/forms/field-types/Blocks/index.scss
+++ b/src/admin/components/forms/field-types/Blocks/index.scss
@@ -73,8 +73,4 @@
       }
     }
   }
-
-  &__fields>.field-type:last-child {
-    margin-bottom: 0;
-  }
 }
