--- a/src/admin/components/forms/field-types/Collapsible/index.scss
+++ b/src/admin/components/forms/field-types/Collapsible/index.scss
@@ -6,8 +6,4 @@
   &__label {
     pointer-events: none;
   }
-
-  .field-type:last-child {
-    margin-bottom: 0;
-  }
 }
